--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -67,7 +67,7 @@ jobs:
     needs: [lint]
     strategy:
       matrix:
-        pyver: ['3.8', '3.9', '3.10', '3.11']
+        pyver: ['3.8', '3.9', '3.10', '3.11', '3.12']
         no-extensions: ['', 'Y']
         experimental: [false]
         os: [ubuntu, macos, windows]
@@ -76,15 +76,6 @@ jobs:
             no-extensions: 'Y'
           - os: windows
             no-extensions: 'Y'
-        include:
-          - pyver: 3.12-dev
-            no-extensions: ''
-            experimental: true
-            os: ubuntu
-          - pyver: 3.12-dev
-            no-extensions: 'Y'
-            experimental: true
-            os: ubuntu
       fail-fast: false
     runs-on: ${{ matrix.os }}-latest
     timeout-minutes: 15
